# test_repo

./: CMakeLists.txt  LICENSE  README.md  Task1  Task_1  Task_2  Task_3  Test  _config.yml  index.md  test
.github/workflows/: build-and-lint.yml  ci.yml  pep8-check.yml  python-app.yml
Tests/: Heap_sort_test.py
src/: CMakeLists.txt  Task1.c  Task2.c
src/C_Homework_1/: CMakeLists.txt
src/C_Homework_10/: CMakeLists.txt  SortedList.c  Sorted_list.c  Task1.c  Task1_test.c  Task2.c  Task2_test.c  Tests_to_sorted_list.c  double_parser.c  double_parser.h
src/C_Homework_12/: CMakeLists.txt  binary_representation.c  double_parser.h  double_parses_main_file.c  double_parses_test.c  tests_to_binary_representation.c
src/C_Homework_2/: CMakeLists.txt  Task_1.c  Task_2.c  Task_3.c  Task_4.c
src/C_Homework_3/: CMakeLists.txt  Task_1.c  Task_2.c  Task_3.c
src/C_Homework_4/: CMakeLists.txt  OptimalSorting.c  OptimalSorting.s  main.c  sort.c  sort.h  sort.s
src/C_Homework_5/: Sorting_station.c  Stack.c  Stack.h  extended_bracket_balance.c
src/C_Homework_6/: CMakeLists.txt  Counting_rhyme.c  SortedList.c  SortedList.h  Sorted_list.c
src/C_Homework_9/: CMakeLists.txt  Stack.h  extended_bracket_balance.c
src/C_Test1/: Fibonacci_number.c  Other_largest_summ.c  Selection_sort.c
src/C_Test2/: Again_Palindrome.c  Cyclic_Shift.c  Cyclic_Shift.cpp  List.c  List.h
src/C_Test_1/: Task_1.c  Task_2.c  Task_3.c
src/C_homework_2/: Task_1.c  Task_2.c  Task_3.c  Task_4.c
src/Homework7/: CMakeLists.txt  Stack.c
src/List/: List.c
src/Python_Homework_1/: Coin_exchange.py  Fibonacci_large_number.py  Sieve_Eratosthenes.py
src/Python_Homework_11/: Huffman_code.py
src/Python_Homework_12/: Depth_first_search.py
src/Python_Homework_3/: Bubble_algorithm.py
src/Python_Homework_4/: complexity.md  exhaustive_decision.py  quick_solution.py
src/Python_Homework_5/: File_design.py
src/Python_Homework_6/: Heap_sort.py
src/Python_Homework_7/: Curry_and_uncurry.py
src/Python_Test2/: immutable_matrix.py  text_format_matrix.py
src/Python_Test2/Standart_matrix/: Standart_matrix.py
src/Python_homework_1/: Hello_world.py  reverse_lexicographical_order.py
src/Python_homework_2/: euclid.py
src/Python_homework_3/: Bubble Algorithm.py
src/Python_homework_8/: Huffman_Code.py  test.py
src/Python_homework_9/: depth_first_search.py
src/SortedList/: SortedList.c
src/Stack/: Stack.c  Task1.c  Task2.c  Test.c
src/Task_1/: OptimalSorting.c
src/Tests/: CMakeLists.txt  Heap_sort_Random.py  Heap_sort_Test.py  SortedList.h  Task1.c
